cmake_minimum_required (VERSION 2.8)
project(Uebung3)
set(CMAKE_CXX_FLAGS "-std=c++0x")

add_executable(aufgabe1 aufgabe1.cpp)
add_executable(aufgabe2bis4 aufgabe2bis4.cpp)
add_executable(aufgabe5 aufgabe5.cpp)
add_executable(aufgabe6 aufgabe6.cpp)
add_executable(aufgabe8 aufgabe8.cpp)
add_executable(aufgabe9_10 aufgabe9_10.cpp)
add_executable(aufgabe11 aufgabe11.cpp)
